# cpuRE

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  app.cpp  app.h  bounding.cpp  bounding.h  camera.cpp  camera.h  display.cpp  display.h  framebuffer.cpp  framebuffer.h  main.cpp  manipulator.cpp  manipulator.h  renderer.cpp  renderer.h  scene.cpp  scene.h  timer.h  visitor.cpp  visitor.h
src/pipeline/: bin_rasterizaion.cuh  bin_rasterizaion.h  bin_tile_space.cuh  bin_tile_space.h  bitmask.cu  bitmask.cuh  bitmask.h  buffer_io.cuh  buffer_io.h  clipping.cuh  clipping.h  context.cuh  context.h  debug_draw.cuh  debug_draw.h  geometry.cpp  geometry.cuh  geometry.h  geometry_stage.cuh  geometry_stage.h  pipeline.cuh  pipeline.h  primitive_types.cuh  primitive_types.h  rasterization_stage.cuh  rasterization_stage.h  shader.cuh  shader.h  shading.cuh  shading.h  stamp_shading.h  test.cu  tile_rasterizaion.cuh  tile_rasterizaion.h  triangle_buffer.cu  triangle_buffer.cuh  triangle_buffer.h  viewport.cuh  viewport.h
